--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     compileSdkVersion compile_sdk_version
     buildToolsVersion build_tools_version
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.example.sample"
         minSdkVersion min_sdk_version
         targetSdkVersion target_sdk_version
@@ -12,23 +13,45 @@ android {
         versionName version_name
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
     buildTypes {
         debug {
             minifyEnabled false
+            shrinkResources false
             // 开发环境
             buildConfigField 'String', 'API_HOST_URL', '"http://www.sojson.com/"'
         }
         mtest {
             minifyEnabled false
+            shrinkResources false
             //测试环境
             buildConfigField 'String', 'API_HOST_URL', '"http://www.sojson.com/"'
         }
         release {
             minifyEnabled true
+            shrinkResources true
             //生产环境
             buildConfigField 'String', 'API_HOST_URL', '"http://www.sojson.com/"'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            // 自定义输出配置
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        def date = Calendar.getInstance();
+                        def timeStr = "_" + date.get(Calendar.YEAR) + (((date.get(Calendar.MONTH) + 1) >= 10 ? date.get(Calendar.MONTH) + 1 : "0" + (date.get(Calendar.MONTH) + 1))) + (date.get(Calendar.DAY_OF_MONTH) >= 10 ? date.get(Calendar.DAY_OF_MONTH) : "0" + date.get(Calendar.DAY_OF_MONTH)) + "_" + (date.get(Calendar.HOUR_OF_DAY) >= 10 ? date.get(Calendar.HOUR_OF_DAY) : "0" + date.get(Calendar.HOUR_OF_DAY)) + (date.get(Calendar.MINUTE) >= 10 ? date.get(Calendar.MINUTE) : "0" + date.get(Calendar.MINUTE)) + ".apk";
+                        def fileName = "Android_${defaultConfig.versionName}_${defaultConfig.versionCode}" + timeStr;
+                        output.outputFile = new File(outputFile.parent, fileName)
+                    }
+                }
+            }
         }
+
+
     }
 }
 
